--- a/config.h.in
+++ b/config.h.in
@@ -45,6 +45,9 @@
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
+/* Define to 1 if you have the `mp3lame' library (-lmp3lame). */
+#undef HAVE_LIBMP3LAME
+
 /* Define to 1 if you have the `protobuf-c' library (-lprotobuf-c). */
 #undef HAVE_LIBPROTOBUF_C
 
